--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -24,12 +24,17 @@ Size=110,54
 Collapsed=0
 
 [Window][Test Layer]
-Pos=462,31
+Pos=22,11
 Size=312,94
 Collapsed=0
 
 [Window][Getting Started Layer]
 Pos=17,9
 Size=583,141
+Collapsed=0
+
+[Window][Lighting Layer]
+Pos=13,9
+Size=603,89
 Collapsed=0
 
