--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -1311,6 +1311,9 @@
     <ClInclude Include="vendor\stbimage\stb_image.h">
       <Filter>vendor\stbimage</Filter>
     </ClInclude>
+    <ClInclude Include="src\Util\Model\Mesh.h" />
+    <ClInclude Include="src\Util\Model\Model.h" />
+    <ClInclude Include="src\Layers\Implementation\ModelLoadingLayer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp">
@@ -1352,5 +1355,12 @@
     <ClCompile Include="vendor\stbimage\stb_image.cpp">
       <Filter>vendor\stbimage</Filter>
     </ClCompile>
+    <ClCompile Include="src\Util\Model\Mesh.cpp" />
+    <ClCompile Include="src\Util\Model\Model.cpp" />
+    <ClCompile Include="src\Layers\Implementation\ModelLoadingLayer.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="res\ModelLoading\vertex.shader" />
+    <None Include="res\ModelLoading\fragment.shader" />
   </ItemGroup>
 </Project>
