--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -34,7 +34,12 @@ Size=583,141
 Collapsed=0
 
 [Window][Lighting Layer]
-Pos=9,18
+Pos=14,18
 Size=603,157
+Collapsed=0
+
+[Window][Model Loading]
+Pos=4,19
+Size=709,71
 Collapsed=0
 
