Added kernel post processing to advanced section, fixed ImGui kernel issue

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -35,7 +35,7 @@ Collapsed=0
 
 [Window][Lighting Layer]
 Pos=14,18
-Size=603,157
+Size=603,187
 Collapsed=0
 
 [Window][Model Loading]
@@ -44,7 +44,12 @@ Size=709,71
 Collapsed=0
 
 [Window][Advanced OpenGL]
-Pos=60,60
-Size=108,54
+Pos=21,14
+Size=649,259
+Collapsed=0
+
+[Window][Kernel Array]
+Pos=133,222
+Size=588,272
 Collapsed=0
 
